# eventprocessor

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RESULT.md
cmake/: CompilerOptionsTarget.cmake  EventprocessorSetupEnvironment.cmake  SanitizersOptionsTarget.cmake  SetCompileCommands.cmake
include/eventprocessor/core/: event.h  event_processor_concurrent_in_place.h
include/eventprocessor/queues/: spsc.h
src/: test_sanity_check.cpp
src/event_processor/: event_processor.h  event_processor_concurrent_in_place.h
src/queues/: mpsc.h  spsc.h  thread_info.h
